--- a/pagenotes/resources/jQuery-annotater/annotate.css
+++ b/pagenotes/resources/jQuery-annotater/annotate.css
@@ -103,3 +103,10 @@
     border-top: 1px dashed red; 
     height: 1px;
 }
+
+.pagenote_note {
+    background: white;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
